feat: complete all steps for sign up form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,9 @@ body {
   color: var(--color-primary-foreground);
 }
 
-
+.myInput {
+  @apply pl-10 bg-input text-input-foreground p-3 rounded-full focus:outline-2 focus:outline-primary focus:outline-offset-2 transition
+}
 
 
 @theme inline {
